[package]
name = "commerce_v2"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "prisma-cli"]

[dependencies]
async-nats = { version = "0.37.0", default-features = false, features = ["ring"] }
http = { version = "1.1.0", default-features = false }
jwtk = { git = "https://github.com/blckngm/jwtk.git", version = "0.3.0" }
prost = { version = "0.13.3", default-features = false }
reqwest = { version = "0.12.8", default-features = false }
serde = { version = "1.0.210", default-features = false }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tonic-web = "0.12.3"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"

[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.11"
default-features = false
features = ["postgresql"]

[dependencies.service-apis]
path = "/home/nedrise/Work/Sited.io/Libraries/service-apis/rust"
features = ["sited_io-commerce-v2"]
